--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 <h1 class="firstimg" "h1">Slendertech</h1>
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\hhgg.jpg">
+<img src="hhgg.jpg">
 <br>
 <a href="phones.html">Phones</a>
     \
