--- a/kids.html
+++ b/kids.html
@@ -11,6 +11,6 @@
 </br>
 
 <p>And this is the kids page and the picture below is my favorite tablet cause it has Super Mario Ondessy.</p>
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\Kids Tablet.jpg">
+<img src="Kids Tablet.jpg">
 
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\Kids Tablet Specs.jpg"
+<img src="Kids Tablet Specs.jpg"
