--- a/phones.html
+++ b/phones.html
@@ -11,9 +11,9 @@
 </br>
 
 <p>This is the phones page and the picture below is my favorite phone and the latest phone of Samsung .</p>
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\Samsung Galaxy Z Fold 5.jpg">
+<img src="Samsung Galaxy Z Fold 5.jpg">
 
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\Samsung Galaxy Z Fold 5 Specs.jpg">
+<img src="Samsung Galaxy Z Fold 5 Specs.jpg">
 
 </body>
   </html>
