--- a/watches.html
+++ b/watches.html
@@ -17,9 +17,9 @@
 </br>
 
 <p>And this is the watches page and the picture below is my favorite watch.</p>
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\watch 5.jpg">
+<img src="watch 5.jpg">
 
-<img src="C:\Users\azibs\OneDrive\Desktop\My Web Project\Watch 5 Specs.jpg"
+<img src="Watch 5 Specs.jpg"
 
 </body>
   </html>
