--- a/kids.html
+++ b/kids.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+</head>
+<body>
+
 <h1>Kids</h1> 
 <link rel="stylesheet" href="cool.css">
 
@@ -11,6 +17,8 @@
 </br>
 
 <p>And this is the kids page and the picture below is my favorite tablet cause it has Super Mario Ondessy.</p>
-<img src="Kids Tablet.jpg">
+<p><img src="Kids Tablet Specs.jpg"></p>
 
-<img src="Kids Tablet Specs.jpg"
+<p><img src="Kids Tablet.jpg"></p>
+</body>
+</html>
